--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,15 @@
   </head>
   <body>
       <div id="app">
-          <h1>Product goes here</h1>
+          <h1>{{ product }}</h1>
+          <p>{{ description }}</p>
       </div>
 
+      <!-- Vue.js -->
+      <!-- development version, includes helpful console warnings -->
+      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+      <!-- Custom JavaScript -->
       <script src="main.js"></script>
   </body>
 </html>
