--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <title>Product App</title>
   </head>
   <body>
+      <div class="nav-bar"></div>
       <div id="app">
-          <h1>{{ product }}</h1>
-          <p>{{ description }}</p>
+        <div class="product">
+          <div class="product-image">
+            <img :src="image">
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+            <p>{{ description }}</p>
+          </div>
+        </div>
       </div>
 
       <!-- Vue.js -->
@@ -18,6 +29,6 @@
       <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 
       <!-- Custom JavaScript -->
-      <script src="main.js"></script>
+      <script src="js/main.js"></script>
   </body>
 </html>
