--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <span v-if="onSale">On Sale!</span>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost out of Stock</p>
+            <p v-else>Out of Stock</p>
             <p>{{ description }}</p>
           </div>
         </div>
