--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,19 @@
             <p v-else-if="inventory <= 10 && inventory > 0">Almost out of Stock</p>
             <p v-else>Out of Stock</p>
             <p>{{ description }}</p>
+
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+
+            <p>Sizes:</p>
+            <ul>
+              <li v-for="size in sizes">{{ size }}</li>
+            </ul>
+
+            <div v-for="variant in variants" :key="variant.variantId">
+              <p>{{ variant.variantColor }}</p>
+            </div>
           </div>
         </div>
       </div>
