--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,9 @@
             <img :src="image">
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
+            <h1>{{ title }}</h1>
             <span v-if="onSale">On Sale!</span>
-            <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Almost out of Stock</p>
+            <p v-if="inStock">In Stock</p>
             <p v-else>Out of Stock</p>
             <p>{{ description }}</p>
 
@@ -34,9 +33,10 @@
               <li v-for="size in sizes">{{ size }}</li>
             </ul>
 
-            <div v-for="variant in variants" :key="variant.variantId" class="color-box" :style="{ backgroundColor: variant.variantColor}" @mouseover="updateProduct(variant.variantImage)">            </div>
+            <div v-for="(variant, index) in variants" :key="variant.variantId" class="color-box" :style="{ backgroundColor: variant.variantColor}" @mouseover="updateProduct(index)">
+            </div>
 
-            <button v-on:click="addToCart" :disabled="inventory === 0" :class="{ disabledButton: inventory === 0 }">Add to Cart</button>
+            <button v-on:click="addToCart" :disabled="!inStock" :class="{ disabledButton: !inStock }">Add to Cart</button>
 
             <div class="cart">
               <p>Cart({{ cart }})</p>
