--- a/public/index.html
+++ b/public/index.html
@@ -13,36 +13,7 @@
   <body>
       <div class="nav-bar"></div>
       <div id="app">
-        <div class="product">
-          <div class="product-image">
-            <img :src="image">
-          </div>
-          <div class="product-info">
-            <h1>{{ title }}</h1>
-            <span v-if="onSale">On Sale!</span>
-            <p v-if="inStock">In Stock</p>
-            <p v-else>Out of Stock</p>
-            <p>{{ description }}</p>
-
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-
-            <p>Sizes:</p>
-            <ul>
-              <li v-for="size in sizes">{{ size }}</li>
-            </ul>
-
-            <div v-for="(variant, index) in variants" :key="variant.variantId" class="color-box" :style="{ backgroundColor: variant.variantColor}" @mouseover="updateProduct(index)">
-            </div>
-
-            <button v-on:click="addToCart" :disabled="!inStock" :class="{ disabledButton: !inStock }">Add to Cart</button>
-
-            <div class="cart">
-              <p>Cart({{ cart }})</p>
-            </div>
-          </div>
-        </div>
+        <product :premium="premium"></product>
       </div>
 
       <!-- Vue.js -->
